# cellular-automata

./: CMakeLists.txt  README.md
examples/: glider.toml  gosperglidergun.toml
src/: config.cpp  config.hpp  main.cpp  simulation.cpp  simulation.hpp
